src/main/kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: userlist
  labels: 
    istio-injection: enabled
