src/main/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: userlist
  name: userlist
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userlist
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: userlist
    spec:
      containers:
      - image: ailtonmsj/userlist-jvm:1.0.0
        name: userlist-jvm
        imagePullPolicy: Always
        resources: {}
status: {}
