src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userlist
  labels:
    app: userlist  
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: userlist
