src/main/kubernetes/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userlist
spec:
  gateways:
  - userlist-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /usuario
    rewrite:
      uri: /usuario
    route:
    - destination:
        host: userlist
        port:
          number: 8080
